# PhotonSpectrum

./: .gitignore  PhotonSpectrum.cabal  shell.nix  stack.yaml
exe/: photonspectrum.hs  test.hs
lib/HEP/Analysis/: Histogram1D.hs
lib/HEP/Analysis/HepMC/: Photon.hs
src/: photonspectrum.hs  test.hs
src/HEP/Analysis/HepMC/: Photon.hs
src/HEP/Data/: Histogram1D.hs
src/HEP/Data/HepMC/: Photon.hs
